# esw1-c-handin-1

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/session1/: celsius.c  ex1.asm  ex1.c  ex1.i  ex2.c  fahrenheit.c
src/session2/: addition.h  main.c  multiplication.h  subtraction.c  subtraction.h
src/session3/: calling_functions.c  divide_7_with_3.c  exercise_3_2_how_does_string_character_arrays_work_in_c.c  main.c  my_string_func.c  my_string_func.h
src/session4/: main.c  myStr.c  myStr.h
src/session5/: door.c  door.h  light.c  light.h  main.c  refrigerator.c  refrigerator.h  refrigerator_controller.c  refrigerator_controller.h  refrigerator_system.asta
src/session6/1/: list.c  list.h  main.c
src/session6/2/: main.c  student.c  student.h  studentHandler.c  studentHandler.h  studentList.c  studentList.h
src/session6/3/: main.c
src/session6/3/adapter/: humidityListAdapter.c  humidityListAdapter.h  roomListAdapter.c  roomListAdapter.h  temperatureListAdapter.c  temperatureListAdapter.h
src/session6/3/driver/: humidityDriver.c  humidityDriver.h  tempDriver.c  tempDriver.h
src/session6/3/handler/: healthHandler.c  healthHandler.h
src/session6/3/model/: humidity.c  humidity.h  room.c  room.h  temperature.c  temperature.h
src/session9/list_tests/: list_tests.cc
